--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,15 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 2.1.0.M1 (2016-02-12)
+----------------------------------------
+* DATACOUCH-202 - Adapt to API changes in Spring Data Commons QueryMethod.
+* DATACOUCH-198 - Add code of conduct.
+* DATACOUCH-195 - Release 2.1 M1 (Hopper).
+* DATACOUCH-181 - Adapt to API changes in Spring Data Commons.
+* DATACOUCH-115 - _class attribute doesn't work with couchbase sync gateway.
+
+
 Changes in version 2.0.0.RELEASE (2016-02-08)
 ---------------------------------------------
 * DATACOUCH-180 - Named N1QL param doesn't work.
