--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 1.4.4.RELEASE (2016-02-23)
+---------------------------------------------
+* DATACOUCH-205 - Release 1.4.4 (Gosling SR4).
+
+
 Changes in version 2.1.0.M1 (2016-02-12)
 ----------------------------------------
 * DATACOUCH-202 - Adapt to API changes in Spring Data Commons QueryMethod.
