--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 2.1.0.RELEASE (2016-04-06)
+---------------------------------------------
+* DATACOUCH-219 - Add pull request template.
+* DATACOUCH-218 - Release 2.1 GA (Hopper).
+
+
 Changes in version 2.1.0.RC1 (2016-03-18)
 -----------------------------------------
 * DATACOUCH-216 - Add template getter on CouchbaseRepository interface.
