DATACOUCH-221 - Updated changelog.

--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,18 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 2.2.0.M1 (2016-07-27)
+----------------------------------------
+* DATACOUCH-231 - Bump SDK to 2.2.7 for Hopper SR2, Ingals.
+* DATACOUCH-229 - Some N1QL/index error messages checked by DATACOUCH are changing in Couchbase Server 4.5.
+* DATACOUCH-228 - findByView could be made more performant by using async API internally.
+* DATACOUCH-227 - findByView won't use retainOrder parameter if RawJsonDocument target is not used.
+* DATACOUCH-226 - Add Strict @Field Validation in MappingCouchbaseConverter.
+* DATACOUCH-225 - spring-data-couchbase 2.x series incompatible with Couchbase SDK > 2.2.3.
+* DATACOUCH-224 - Improve concurrent save/insert optimistic locking.
+* DATACOUCH-221 - Release 2.2 M1 (Ingalls).
+
+
 Changes in version 2.1.2.RELEASE (2016-06-15)
 ---------------------------------------------
 * DATACOUCH-231 - Bump SDK to 2.2.7 for Hopper SR2, Ingals.
