--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 2.1.3.RELEASE (2016-09-20)
+---------------------------------------------
+* DATACOUCH-236 - Release 2.1.3 (Hopper SR3).
+
+
 Changes in version 2.2.0.M1 (2016-07-27)
 ----------------------------------------
 * DATACOUCH-231 - Bump SDK to 2.2.7 for Hopper SR2, Ingals.
