--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 1.4.5.RELEASE (2016-09-20)
+---------------------------------------------
+* DATACOUCH-248 - Ignore tests not running on AWS to security restrictions.
+* DATACOUCH-247 - Release 1.4.5 (Gosling SR5).
+
+
 Changes in version 2.1.3.RELEASE (2016-09-20)
 ---------------------------------------------
 * DATACOUCH-236 - Release 2.1.3 (Hopper SR3).
