--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 2.1.4.RELEASE (2016-09-29)
+---------------------------------------------
+* DATACOUCH-249 - Release 2.1.4 (Hopper SR4).
+
+
 Changes in version 1.4.6.RELEASE (2016-09-29)
 ---------------------------------------------
 * DATACOUCH-252 - Release 1.4.6 (Gosling SR6).
