--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 3.0.0.M1 (2016-11-23)
+----------------------------------------
+* DATACOUCH-256 - Set up 3.0 development.
+* DATACOUCH-255 - Release 3.0 M1 (Kay).
+
+
 Changes in version 2.1.5.RELEASE (2016-11-03)
 ---------------------------------------------
 * DATACOUCH-253 - Release 2.1.5 (Hopper SR5).
