--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,13 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 2.1.6.RELEASE (2016-12-21)
+---------------------------------------------
+* DATACOUCH-254 - Release 2.1.6 (Hopper SR6).
+* DATACOUCH-251 - Keyword "Or" not working properly.
+* DATACOUCH-237 - Query method with pagination + sort creates invalid count statement.
+
+
 Changes in version 2.2.0.RC1 (2016-12-21)
 -----------------------------------------
 * DATACOUCH-262 - Adapt API in RepositoryFactoryBeanSupport implementation.
