--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 2.2.0.RELEASE (2017-01-26)
+---------------------------------------------
+* DATACOUCH-270 - Update project documentation with the CLA tool integration.
+* DATACOUCH-267 - Release 2.2 GA (Ingalls).
+
+
 Changes in version 2.1.6.RELEASE (2016-12-21)
 ---------------------------------------------
 * DATACOUCH-254 - Release 2.1.6 (Hopper SR6).
