--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 2.1.7.RELEASE (2017-01-26)
+---------------------------------------------
+* DATACOUCH-266 - Release 2.1.7 (Hopper SR7).
+
+
 Changes in version 2.2.0.RELEASE (2017-01-26)
 ---------------------------------------------
 * DATACOUCH-270 - Update project documentation with the CLA tool integration.
