DATACOUCH-275 Key auto generation using attributes, uuid
Original pull request: #142.

--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -20,6 +20,7 @@ include::preface.adoc[]
 :leveloffset: +1
 include::configuration.adoc[]
 include::entity.adoc[]
+include::autokeygeneration.adoc[]
 include::{spring-data-commons-docs}/repositories.adoc[]
 include::repository.adoc[]
 include::template.adoc[]
