--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,15 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 2.1.9.RELEASE (2017-04-19)
+---------------------------------------------
+* DATACOUCH-290 - Update to latest java client version 2.4.4.
+* DATACOUCH-284 - Release 2.1.9 (Hopper SR9).
+* DATACOUCH-276 - Ordering by embeded field doesn't work.
+* DATACOUCH-275 - Auto generate values for document ids.
+* DATACOUCH-90 - Support for java.time for DateConverters.
+
+
 Changes in version 2.2.2.RELEASE (2017-04-19)
 ---------------------------------------------
 * DATACOUCH-290 - Update to latest java client version 2.4.4.
