--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 2.2.3.RELEASE (2017-04-19)
+---------------------------------------------
+* DATACOUCH-299 - Revert upgrades to 2.4 driver.
+* DATACOUCH-297 - Release 2.2.3 (Ingalls SR3).
+
+
 Changes in version 2.1.9.RELEASE (2017-04-19)
 ---------------------------------------------
 * DATACOUCH-290 - Update to latest java client version 2.4.4.
