--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 2.1.10.RELEASE (2017-04-19)
+----------------------------------------------
+* DATACOUCH-299 - Revert upgrades to 2.4 driver.
+* DATACOUCH-298 - Release 2.1.10 (Hopper SR10).
+
+
 Changes in version 2.2.3.RELEASE (2017-04-19)
 ---------------------------------------------
 * DATACOUCH-299 - Revert upgrades to 2.4 driver.
