--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 2.1.11.RELEASE (2017-06-07)
+----------------------------------------------
+* DATACOUCH-300 - Release 2.1.11 (Hopper SR11).
+
+
 Changes in version 3.0.0.M3 (2017-05-09)
 ----------------------------------------
 * DATACOUCH-305 - Adapt to API changes in repository interfaces.
