DATACOUCH-322 - Add username to configuration for RBAC support and upgrade to couchbase client 2.4.7

--- a/src/main/asciidoc/configuration.adoc
+++ b/src/main/asciidoc/configuration.adoc
@@ -70,8 +70,13 @@ public class Config extends AbstractCouchbaseConfiguration {
     }
 
     @Override
-    protected String getBucketPassword() {
-        return "";
+    protected String getBucketUser() {
+        return "user";
+    }
+
+    @Override
+    protected String getPassword() {
+        return "password";
     }
 }
 ----
