--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,13 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 3.0.0.RC1 (2017-07-25)
+-----------------------------------------
+* DATACOUCH-323 - Inherit Project Reactor version from dependency management.
+* DATACOUCH-320 - Adopt to Optional changes in Spring Data Commons.
+* DATACOUCH-316 - Release 3.0 RC1 (Kay).
+
+
 Changes in version 2.2.5.RELEASE (2017-07-24)
 ---------------------------------------------
 * DATACOUCH-313 - Release 2.2.5 (Ingalls SR5).
