--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 2.2.6.RELEASE (2017-07-26)
+---------------------------------------------
+* DATACOUCH-324 - Release 2.2.6 (Ingalls SR6).
+
+
 Changes in version 3.0.0.RC2 (2017-07-25)
 -----------------------------------------
 * DATACOUCH-325 - Release 3.0 RC2 (Kay).
