--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 2.2.7.RELEASE (2017-09-11)
+---------------------------------------------
+* DATACOUCH-330 - Multiple Spring Data modules clash with one another.
+* DATACOUCH-327 - Release 2.2.7 (Ingalls SR7).
+
+
 Changes in version 2.2.6.RELEASE (2017-07-26)
 ---------------------------------------------
 * DATACOUCH-324 - Release 2.2.6 (Ingalls SR6).
