--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,13 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 3.0.0.RELEASE (2017-10-02)
+---------------------------------------------
+* DATACOUCH-338 - Add explicit automatic module name for Java 9.
+* DATACOUCH-336 - Upgrade to OpenWebBeans 2.0.1.
+* DATACOUCH-334 - Release 3.0 GA (Kay).
+
+
 Changes in version 3.0.0.RC3 (2017-09-11)
 -----------------------------------------
 * DATACOUCH-330 - Multiple Spring Data modules clash with one another.
