--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 2.2.9.RELEASE (2017-11-27)
+---------------------------------------------
+* DATACOUCH-342 - Release 2.2.9 (Ingalls SR9).
+
+
 Changes in version 3.0.1.RELEASE (2017-10-27)
 ---------------------------------------------
 * DATACOUCH-346 - Adapt API changes in Property in test cases.
