--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 3.0.4.RELEASE (2018-02-19)
+---------------------------------------------
+* DATACOUCH-360 - Release 3.0.4 (Kay SR4).
+
+
 Changes in version 3.1.0.M1 (2018-02-06)
 ----------------------------------------
 * DATACOUCH-350 - [Reactive]CouchbaseRepositoryConfigurationExtension does not filter reactive repositories.
