--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,14 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 2.2.11.RELEASE (2018-04-04)
+----------------------------------------------
+* DATACOUCH-370 - Remove explicit declaration of Jackson library versions.
+* DATACOUCH-367 - Update to 2.5.6 client.
+* DATACOUCH-362 - Use dynamic proxy instead of couchbase environment no shutdown proxy.
+* DATACOUCH-359 - Release 2.2.11 (Ingalls SR11).
+
+
 Changes in version 3.0.5.RELEASE (2018-02-28)
 ---------------------------------------------
 * DATACOUCH-365 - Release 3.0.5 (Kay SR5).
