--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,18 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 3.1.0.M2 (2018-04-13)
+----------------------------------------
+* DATACOUCH-373 - Adapt to API changes in Spring Data Commons.
+* DATACOUCH-370 - Remove explicit declaration of Jackson library versions.
+* DATACOUCH-368 - Export composable repositories via CDI.
+* DATACOUCH-367 - Update to 2.5.6 client.
+* DATACOUCH-364 - Release 3.1 M2 (Lovelace).
+* DATACOUCH-363 - Upgrade to Java client 2.5.5.
+* DATACOUCH-362 - Use dynamic proxy instead of couchbase environment no shutdown proxy.
+* DATACOUCH-322 - Add username for rbac support.
+
+
 Changes in version 3.0.6.RELEASE (2018-04-04)
 ---------------------------------------------
 * DATACOUCH-370 - Remove explicit declaration of Jackson library versions.
