--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 2.2.12.RELEASE (2018-05-08)
+----------------------------------------------
+* DATACOUCH-371 - Release 2.2.12 (Ingalls SR12).
+
+
 Changes in version 3.1.0.M2 (2018-04-13)
 ----------------------------------------
 * DATACOUCH-373 - Adapt to API changes in Spring Data Commons.
