--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 3.0.9.RELEASE (2018-07-26)
+---------------------------------------------
+* DATACOUCH-391 - Remove EvaluationContextProvider & ExtensionAwareEvaluationContextProvider imports.
+* DATACOUCH-382 - Release 3.0.9 (Kay SR9).
+
+
 Changes in version 3.1.0.RC1 (2018-07-26)
 -----------------------------------------
 * DATACOUCH-395 - Update to Couchbase SDK 2.6.1.
