--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 2.2.14.RELEASE (2018-07-27)
+----------------------------------------------
+* DATACOUCH-381 - Release 2.2.14 (Ingalls SR14).
+
+
 Changes in version 3.0.9.RELEASE (2018-07-26)
 ---------------------------------------------
 * DATACOUCH-391 - Remove EvaluationContextProvider & ExtensionAwareEvaluationContextProvider imports.
