--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 3.1.0.RC2 (2018-08-20)
+-----------------------------------------
+* DATACOUCH-396 - Release 3.1 RC2 (Lovelace).
+
+
 Changes in version 2.2.14.RELEASE (2018-07-27)
 ----------------------------------------------
 * DATACOUCH-381 - Release 2.2.14 (Ingalls SR14).
