--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 3.1.0.RELEASE (2018-09-21)
+---------------------------------------------
+* DATACOUCH-405 - Include documentation about Object Mapping Fundamentals.
+* DATACOUCH-400 - Release 3.1 GA (Lovelace).
+
+
 Changes in version 3.0.10.RELEASE (2018-09-10)
 ----------------------------------------------
 * DATACOUCH-397 - Release 3.0.10 (Kay SR10).
