--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 3.0.11.RELEASE (2018-10-15)
+----------------------------------------------
+* DATACOUCH-404 - Release 3.0.11 (Kay SR11).
+
+
 Changes in version 3.1.1.RELEASE (2018-10-15)
 ---------------------------------------------
 * DATACOUCH-406 - Release 3.1.1 (Lovelace SR1).
