--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,11 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 2.2.16.RELEASE (2018-10-15)
+----------------------------------------------
+* DATACOUCH-403 - Release 2.2.16 (Ingalls SR16).
+
+
 Changes in version 3.0.11.RELEASE (2018-10-15)
 ----------------------------------------------
 * DATACOUCH-404 - Release 3.0.11 (Kay SR11).
