--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,13 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 3.2.0.M1 (2018-12-11)
+----------------------------------------
+* DATACOUCH-421 - Simplify reference documentation setup.
+* DATACOUCH-420 - Release 3.2 M1 (Moore).
+* DATACOUCH-413 - Annotated repository query method arguments are not escaped properly.
+
+
 Changes in version 3.1.3.RELEASE (2018-11-27)
 ---------------------------------------------
 * DATACOUCH-414 - Release 3.1.3 (Lovelace SR3).
