--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 2.2.18.RELEASE (2019-01-10)
+----------------------------------------------
+* DATACOUCH-425 - Update copyright years to 2019.
+* DATACOUCH-417 - Release 2.2.18 (Ingalls SR18).
+
+
 Changes in version 3.2.0.M1 (2018-12-11)
 ----------------------------------------
 * DATACOUCH-421 - Simplify reference documentation setup.
