--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 3.1.4.RELEASE (2019-01-10)
+---------------------------------------------
+* DATACOUCH-425 - Update copyright years to 2019.
+* DATACOUCH-419 - Release 3.1.4 (Lovelace SR4).
+
+
 Changes in version 3.0.13.RELEASE (2019-01-10)
 ----------------------------------------------
 * DATACOUCH-425 - Update copyright years to 2019.
