--- a/src/main/resources/changelog.txt
+++ b/src/main/resources/changelog.txt
@@ -1,6 +1,12 @@
 Spring Data Couchbase Changelog
 ===============================
 
+Changes in version 3.1.5.RELEASE (2019-02-13)
+---------------------------------------------
+* DATACOUCH-429 - Release 3.1.5 (Lovelace SR5).
+* DATACOUCH-415 - Performance issue when creating instances of CouchbaseDocument.
+
+
 Changes in version 3.1.4.RELEASE (2019-01-10)
 ---------------------------------------------
 * DATACOUCH-425 - Update copyright years to 2019.
