--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -23,6 +23,7 @@ include::entity.adoc[]
 include::autokeygeneration.adoc[]
 include::{spring-data-commons-docs}/repositories.adoc[]
 include::repository.adoc[]
+include::reactiverepository.adoc[]
 include::template.adoc[]
 :leveloffset: -1
 
