DATACOUCH-434 - Fix reactive repository asciidoc link
Original Pull Request: #179.

--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -21,6 +21,7 @@ include::entity.adoc[]
 include::autokeygeneration.adoc[]
 include::{spring-data-commons-docs}/repositories.adoc[]
 include::repository.adoc[]
+include::reactiverepository.adoc[]
 include::template.adoc[]
 include::ansijoins.adoc[]
 :leveloffset: -1
