DATACOUCH-434 Fix reactive repository asciidoc link

--- a/src/main/asciidoc/index.adoc
+++ b/src/main/asciidoc/index.adoc
@@ -22,6 +22,7 @@ include::autokeygeneration.adoc[]
 include::{spring-data-commons-docs}/repositories.adoc[]
 include::repository.adoc[]
 include::template.adoc[]
+include::reactiverepository.adoc[]
 :leveloffset: -1
 
 
